--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ strum = { version = "0.27.2", features = ["derive"] }
 [[bin]]
 name = "day1"
 path = "src/day1.rs"
+
+[[bin]]
+name = "day2"
+path = "src/day2.rs"
